<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_title_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_welcome"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="20dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/get_started"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:textColor="@color/background"
        android:drawableEnd="@drawable/arrow_right"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_welcome"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_already"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_started"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/welcome_login"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/login_welcome"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:drawableEnd="@drawable/arrow_right_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_already"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>