<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".register.RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="106dp"
        android:layout_height="86dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_title_welcome"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/sub_title_reg"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup"
        tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/username"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/username"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_welcome"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_border"
            android:hint="@string/username"
            android:textColorHint="@color/hint"
            android:textColor="@color/white"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_email_reg"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/email"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_username"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edt_email_reg"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edt_border"
            android:hint="@string/email"
            android:textColorHint="@color/hint"
            android:textColor="@color/white"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email_reg"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_password_reg"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/password"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email_reg"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edt_password_reg"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edt_border"
            android:hint="@string/password"
            android:textColorHint="@color/hint"
            android:textColor="@color/white"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password_reg"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_nationality_reg"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/nationality"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_password_reg"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edt_nationality_reg"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edt_border"
            android:hint="@string/nationality"
            android:textColorHint="@color/hint"
            android:drawableStart="@drawable/us_flag"
            android:drawableEnd="@drawable/arrow_down"
            android:drawablePadding="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:focusable="false"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nationality_reg"
            tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_hp_reg"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/phone_number"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_nationality_reg"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edt_hp_reg"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edt_border"
        android:hint="@string/phone_code"
        android:textColorHint="@color/hint"
        android:textColor="@color/white"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hp_reg"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_reg"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/login_welcome"
        android:text="@string/register"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_hp_reg"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_already_reg"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:text="@string/Already_reg"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_reg"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>