<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".login.LoginActivity">

    <TextView
        android:id="@+id/title_acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/my_account"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        android:background="@drawable/circle_background"
        android:clipToOutline="true"
        app:layout_constraintTop_toBottomOf="@id/title_acc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/username_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/username_acc"
        android:textStyle="bold"
        android:textSize="12dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/img_profile"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/btn_logout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>
